--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,9 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+
+
         {
             "name": "(Windows) Iniciar",
             "type": "cppvsdbg",
@@ -11,7 +14,7 @@
             "program": "insira o nome do programa, por exemplo ${workspaceFolder}/a.exe",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${fileDirname}",
             "environment": [],
             "console": "externalTerminal"
         }
